plugins {
    id 'java'
    id 'application'
    id 'maven-publish'
    id "com.github.node-gradle.node" version "3.0.1"
}

repositories {
    mavenCentral()
}

ext {
    junitVersion = "5.7.1"
}

sourceCompatibility = targetCompatibility = JavaVersion.VERSION_16

dependencies {
    implementation "org.asciidoctor:asciidoctorj-api:2.5.0"

    testImplementation "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"
    testImplementation 'org.assertj:assertj-core:3.19.0'
}

node {
    download = true
    version = "14.16.1"
}

test {
    useJUnitPlatform()
}

publishing {
    publications {
        maven(MavenPublication) {
            groupId = 'org.asciidoctor'
            artifactId = 'asciidoctor-graal-js'
            version = '0.0.1'

            from components.java
        }
    }
}

